--- a/images/api/frontend/src/Styles/table.css
+++ b/images/api/frontend/src/Styles/table.css
@@ -7,5 +7,14 @@
 }
 
 th{
+    padding-top: 12px;
+    padding-bottom: 12px;
     text-align: left;
+    border-bottom: 0.5px solid black; 
+}
+
+tbody td {
+    border-bottom: 0.5px solid black; 
+    padding-top: 12px;
+    padding-bottom: 12px;
 }
