--- a/images/api/frontend/src/Styles/index.css
+++ b/images/api/frontend/src/Styles/index.css
@@ -15,6 +15,7 @@ background: radial-gradient(at center, #DC5A77, #F3D2E8);
 .App{
   margin-left: 6%;
   margin-right: 6%;
+  height: 100vh;
 }
 
 code {
@@ -25,4 +26,17 @@ code {
 a{
   text-decoration: none;
   color: black;
+}
+
+button {
+  font-family: 'Work Sans', sans-serif;
+  background-color: transparent; 
+  padding: 8px;
+  border: 1px solid black; 
+  outline: none;
+}
+
+button:hover{
+  color: white;
+  background-color:black;
 }
