--- a/images/api/frontend/src/Styles/loginRegister.css
+++ b/images/api/frontend/src/Styles/loginRegister.css
@@ -13,7 +13,7 @@
     justify-content: center;
 }
 
-input {
+.form-container input {
     text-decoration: none;
     background: none;
     color: black;
