--- a/images/api/frontend/src/Styles/home.css
+++ b/images/api/frontend/src/Styles/home.css
@@ -4,3 +4,9 @@ h1{
   font-weight: 700;
   font-size: 90px
 }
+
+.forms-container{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
